# reminiscent

./: .dockerignore  .env.example  .envrc  .gitignore  AWS_QUOTAS_REPORT.md  CLAUDE.md  Dockerfile  Dockerfile.worker  FILE_PROCESSING.md  Index.md  LICENSE  README.md  design-doc.md  docker-compose.yml  gem.md  llms.txt  multi-agent.md  pyproject.toml  session_analysis.py  test_api.py  test_pdf_processing.py  updated-plan.md
.claude/: .gitignore
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yaml  release.yml
.research/postgres/: pg17-pg18-features.md  pg18-async-io.md
manifests/: README.backup.md  README.md  TROUBLESHOOTING.md  cluster-config.yaml  costs.md  generate-configmap.sh  generate-sql-configmap.sh
manifests/application/: README.md
manifests/application/phoenix/: deployment.yaml  external-secret.yaml  kustomization.yaml  phoenix-secrets-external.yaml  postgres-external-secret.yaml  secret.yaml
manifests/application/rem-stack/: README.md  argocd-prod.yaml  argocd-staging.yaml  scaling.md
manifests/infra/: README.md
manifests/infra/cdk-eks/: .env.example  .gitignore  DEPLOYMENT-CHECKLIST.md  README.md  cdk.context.json  package-lock.json  package.json  troubleshooting-phase-2.md  tsconfig.json
manifests/infra/eks/: .gitignore  Pulumi.yaml  README.md  __main__.py  karpenter_resources.py  requirements.txt
manifests/local/: README.md  Tiltfile  docker-compose.minio.yml  setup.sh  tilt_config.json
manifests/platform/: README.md  aws-load-balancer-controller-README.md
manifests/platform/argocd/: app-of-apps.yaml  repositories.yaml  values.yaml
manifests/platform/arize-phoenix/: deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
manifests/platform/cloudnative-pg/: cluster.yaml  extensions.yaml
manifests/platform/external-secrets/: README.md  cluster-secret-store.yaml  kubernetes-cluster-secret-store.yaml  kustomization.yaml
manifests/platform/keda/: README.md  application.yaml
manifests/platform/otel/: collector.yaml
manifests/platform/otel-collector/: kustomization.yaml  otel-collector.yaml  serviceaccount.yaml
rem/: .env.example  .gitignore  CONFIGURATION.md  Dockerfile  PHOENIX_ENHANCEMENTS.md  QUICKSTART.md  README.md  SESSION_EXAMPLE.yaml  SESSION_MANAGEMENT.md  TEST_RESULTS.md  Tiltfile  docker-compose.prebuilt.yml  docker-compose.test-local.yml  docker-compose.yml  pyproject.toml  rem-exp-01.md  test_contract_agent_analysis.py  test_contract_ingestion.py  test_mcp_tools.py  test_pdf_extract.py  test_query_outputs.py  walkthrough.md
rem/.experiments/: README.md  RUN_ON_CLUSTER.md  TESTING_GUIDE.md  test-phoenix-integration.sh
rem/.githooks/: pre-push
rem/examples/: audio_processing.py
rem/schemas/: README.md  query-agent.yaml  rem-agent.yaml
rem/schemas/agents/: contract-analyzer.yaml  simple.yaml  test-agent.yaml  test.yaml
rem/schemas/evaluators/: rem-faithfulness.yaml  rem-lookup-correctness.yaml
rem/schemas/ontology_extractors/: README.md  cv-parser-v1.yaml
rem/sql/: install.sql
rem/sql/migrations/: 001_install.sql  002_install_models.sql
rem/src/rem/: __init__.py  config.py  registry.py  settings.py
rem/tests/: README.md  conftest.py  debug_graph.py  debug_pdf_parsing.py
rem/tests/data/: graph_seed.py  graph_seed.yaml
rem/tests/fixtures/: __init__.py  sample_conversations.py
rem/tests/integration/: README.md  conftest.py  run_rem_agent_eval.py  test_actual_streaming_save.py  test_agent_delegation_streaming.py  test_api_endpoints.py  test_ask_agent_streaming.py  test_batch_upsert.py  test_completions_with_sessions.py  test_content_ingest_workflow.py  test_contract_extractor.py  test_dynamic_agents.py  test_embedding_worker.py  test_embeddings_e2e.py  test_feedback_endpoint.py  test_git_provider.py  test_graph_traversal.py  test_mcp_tools.py  test_natural_language_to_rem.py  test_nested_agent_save.py  test_rem_query.py  test_rem_query_agent.py  test_rem_query_agent_structured.py  (+9 more)
schemas/: query-agent.yaml  rem-agent.yaml
scripts/: bootstrap-argocd.sh  check_types.sh  export_phoenix_feedback.py  rebuild_and_test.sh  run_mypy.sh  validate-prereqs.sh
sql/: background_indexes.sql  install_models.sql
src/rem/: settings.py
tests/integration/: test_rem_query.py
(+302 files in other folders)
